# AlphaGen

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: pyproject.toml
backend/app/: backup.py  config.json  config.py  main.py  models.py  simulation.py  test.py
backend/app/data/: countries.json  flights.json  presets.json  world.geo.json
frontend/: angular.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: app.spec.ts
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: components.ts  config.service.ts  config.ts  models.ts  simulation.service.ts
